# de_zoomcamp_25

./: .gitignore  README.md  pyproject.toml
de_zoomcamp_25/module_01/1_terraform_gcp/: notes_terraform.md
de_zoomcamp_25/module_01/1_terraform_gcp/terrademo/: .terraform.lock.hcl
de_zoomcamp_25/module_01/1_terraform_gcp/terrademo/keys/: my-creds.json
de_zoomcamp_25/module_01/2_docker_sql/: docker-compose.yml  ingest_data.py  upload-data.py
de_zoomcamp_25/module_02/: notes_orchestration.md
module_01/: notes.md
module_01/1_terraform_gcp/terrademo/: main.tf  variables.tf
module_01/2_docker_sql/: Dockerfile  ingest_data.py  pipeline.py  upload-data.py
