[tool.poetry]
name = "de-zoomcamp-25"
version = "0.1.0"
description = ""
authors = ["Camilo Perez <camilo.perez@midiagnostics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
pgcli = "^4.1.0"
jupyter = "^1.1.1"
pyarrow = "^19.0.0"
sqlalchemy = "^2.0.37"
psycopg2 = "^2.9.10"
stubs = "^1.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
